opam-version: "2.0"
name:         "wasmtime"
bug-reports:  "https://github.com/LaurentMazare/ocaml-wasmtime/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-wasmtime"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-wasmtime.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "base" {>= "0.13.0"}
  "dune" {>= "1.3.0" build}
  "ocaml" {>= "4.06"}
  "ocaml-compiler-libs"
  "ppx_custom_printf"
  "ppx_compare"
  "ppx_expect"
  "ppx_sexp_conv"
  "sexplib"
  "stb_image"
  "stdio"
]

depopts: [
]

conflicts: [
]

available: [ os = "linux" ]

synopsis: "Wasmtime bindings for OCaml"
description: """
Bindings for Wasmtime, a small and efficient
runtime for WebAssembly.
"""
