opam-version: "2.0"
name:         "wasmtime"
bug-reports:  "https://github.com/LaurentMazare/ocaml-wasmtime/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-wasmtime"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-wasmtime.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "base" {>= "0.13.0"}
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "dune" {>= "2.0.0" build}
  "dune-configurator"
  "libwasmtime" {= "0.0.1"}
  "ocaml" {>= "4.10"}
  "ppx_expect" { with-test }
  "stdio"
]

depopts: [
]

conflicts: [
]

available: [ os = "linux" | os = "macos" ]

synopsis: "Wasmtime bindings for OCaml"
description: """
Bindings for Wasmtime, a small and efficient
runtime for WebAssembly.
"""
