(library
  (name wasmtime)
  (public_name wasmtime)
  (foreign_stubs (language c) (names wasmtime_stubs) (flags :standard  -I %{project_root}/wasmtime/include))
  (c_library_flags :standard %{project_root}/wasmtime/lib/libwasmtime.a -lpthread -lm -ldl)
  (libraries base bigarray ctypes ctypes.foreign ctypes.stubs stdio)
  (inline_tests)
  (preprocess (pps ppx_expect)))

(rule
  (targets bindings.ml)
  (deps    ../stubs/bindings.ml)
  (action  (copy ../stubs/bindings.ml bindings.ml)))

(rule
  (targets wasmtime_stubs.c wasmtime_generated.ml)
  (deps    (:gen ../stubs/gen.exe) %{project_root}/wasmtime/lib/libwasmtime.a (glob_files %{project_root}/wasmtime/include/*.h))
  (action  (run %{gen})))
