(library
  (name wasmtime)
  (public_name wasmtime)
  (foreign_stubs (language c) (names wasmtime_stubs) (flags :standard  (:include c_flags.sexp)))
  (c_library_flags :standard (:include c_library_flags.sexp) -lpthread -lm -ldl)
  (libraries base bigarray ctypes ctypes.foreign ctypes.stubs stdio))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps    (:discover ../config/discover.exe))
  (action  (run %{discover})))

(rule
  (targets bindings.ml)
  (deps    ../stubs/bindings.ml)
  (action  (copy ../stubs/bindings.ml bindings.ml)))

(rule
  (targets wasmtime_stubs.c wasmtime_generated.ml)
  (deps    (:gen ../stubs/gen.exe))
  (action  (run %{gen})))
